@@ -72,7 +72,7 @@ KeyDependencies=mythbuntu-artwork, mythbuntu-default-settings
 
 [Files]
 BackupExt=distUpgrade
-LogDir=/var/log/dist-upgrade
+LogDir=/var/log/dist-upgrade/
 
 [Sources]
 From=karmic
