@@ -12,6 +12,9 @@ update-manager (1:0.134) UNRELEASED; urgency=low
   * update quirks for updates from hardy
   * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:
     - add extra protection against video driver removal (LP: #556629)
+  * DistUpgrade/DistUpgradeMain.py:
+    - improve logging and save system state before performing the 
+      upgrade. Suggested by Matt Zimmerman (LP: #551646)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 07 Apr 2010 09:44:08 +0200
 
